--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-	"ip": "manhbi18112005.aternos.me",
-	"username": "NoNameBot",
-	"port": 47356,
+	"ip": "socialspace.aternos.me",
+	"username": "Bot Moderador",
+	"port": 41596,
 	"autonightskip": false,
 	"pi": 3.14159,
 	"moveinterval": 2,
